<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/LoginGreeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_a_book"
        android:textSize="24sp"
        android:textAlignment="center"/>
    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/otter" />

    <EditText
        android:id="@+id/title_sec"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:hint="@string/title"
        android:inputType="text" />

    <EditText
        android:id="@+id/author_sec"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:hint="@string/author"
        android:inputType="text" />
    <EditText
        android:id="@+id/genre_sec"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:hint="@string/genre"
        android:inputType="text" />
</LinearLayout>