<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >
    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/otter" />
    <Button
        android:text="@string/create_account"
        android:id="@+id/CreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"/>
    <Button
        android:text="@string/place_hold"
        android:id="@+id/PlaceHold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"/>
    <Button
        android:text="@string/manage_system"
        android:id="@+id/Manage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"/>
</LinearLayout>
